Markdown: switch to a new library, add syntax highlighting

--- a/app/elements/markdown/render-markdown.html
+++ b/app/elements/markdown/render-markdown.html
@@ -6,10 +6,13 @@
 		}
 	</style>
 	<template>
+		<link rel="stylesheet" href="/bower_components/highlightjs/styles/default.css">
 		<div id="markdownViewer"></div>
 	</template>
-	<script src="/bower_components/markdown/lib/markdown.js" type="application/javascript"></script>
+	<script src="/bower_components/marked/marked.min.js" type="application/javascript"></script>
+	<script src="/bower_components/highlightjs/highlight.pack.min.js" type="application/javascript"></script>
 	<script>
+		/*global marked:false,hljs:false  */
 		Polymer({
 			is: 'render-markdown',
 			properties: {
@@ -19,8 +22,15 @@
 					observer: '_updateChanges'
 				}
 			},
+			created: function() {
+				marked.setOptions({
+					highlight: function (code) {
+						return hljs.highlightAuto(code).value;
+					}
+				});
+			},
 			_updateChanges: function(){
-				this.$.markdownViewer.innerHTML = markdown.toHTML(this.markdown);
+				this.$.markdownViewer.innerHTML = marked(this.markdown);
 			}
 		});
 	</script>
