--- a/app/elements/services/user-service.html
+++ b/app/elements/services/user-service.html
@@ -14,6 +14,7 @@
 			content-type="application/json"
 			last-response="{{user}}"
 			with-credentials="true"
+			on-response="_onResponse"
 			on-error="_onError">
 		</iron-ajax>
 		<iron-ajax
@@ -23,6 +24,7 @@
 			content-type="application/json"
 			last-response="{{user}}"
 			with-credentials="true"
+			on-response="_onResponse"
 			on-error="_onError">
 		</iron-ajax>
 		<iron-ajax
@@ -32,6 +34,7 @@
 			content-type="application/json"
 			last-response="{{users}}"
 			with-credentials="true"
+			on-response="_onResponse"
 			on-error="_onError">
 		</iron-ajax>
 		<iron-ajax
@@ -60,31 +63,41 @@
 				}
 			},
 			save: function(user){
+				app.startLoading();
 				this.$.postUser.body = user;
 				this.$.postUser.url = util.build('/users');
 				this.$.postUser.generateRequest();
 			},
 			whoAmI: function(){
+				app.startLoading();
 				this.$.getSingleUser.url = util.build('/user');
 				this.$.getSingleUser.generateRequest();
 			},
 			getById: function(key){
+				app.startLoading();
 				this.$.getSingleUser.url = util.build('/users/' + key);
 				this.$.getSingleUser.generateRequest();
 			},
 			getAll: function(){
+				app.startLoading();
 				this.$.getMultiUsers.url = util.build('/users');
 				this.$.getMultiUsers.generateRequest();
 			},
 			invite: function(user){
+				app.startLoading();
 				this.$.inviteUser.url = util.build('/invitations');
 				this.$.inviteUser.body = user;
 				this.$.inviteUser.generateRequest();
 			},
 			_userInvited: function(){
+				app.stopLoading();
 				this.fire('user-invited');
 			},
+			_onResponse: function(){
+				app.stopLoading();
+			},
 			_onError: function(err){
+				app.stopLoading();
 				util.error(err);
 			}
 		});
