--- a/app/elements/submission/sequential/sequential-challenge.html
+++ b/app/elements/submission/sequential/sequential-challenge.html
@@ -104,7 +104,7 @@
 	</template>
 	<script>
 		Polymer({
-			// TODO(victorbalan): Refactor component and split logic.
+			// TODO(victorbalan): Refactor component and split logic and refactor requests.
 			is: 'sequential-challenge',
 			properties: {
 				challenge: {
@@ -153,7 +153,6 @@
 					}
 				}
 				if(new Date(this.result.StartTimes[i]).getTime()>0){
-					app.hideProgress();
 					this.contentStyle = '';
 					this.$.content.innerHTML = '';
 					var finished = document.createElement('challenge-finished');
@@ -165,7 +164,6 @@
 						this.loadTaskById(currentTask);
 						this.$.taskTimer.startWithOffset(Number(timer));
 					}else{
-						app.hideProgress();
 						this.contentStyle = '';
 					}
 					this.displayArrows();
@@ -182,7 +180,6 @@
 				this.loadTaskById(this.challenge.Tasks[this.taskIndex]);
 				this.$.taskTimer.start();
 				this.displayArrows();
-				app.showProgress();
 			},
 			loadTaskById: function(key){
 				if(this.challenge.Tasks.length>1){
@@ -203,7 +200,6 @@
 					this.$.content.innerHTML = '';
 					this.$.content.appendChild(webInterface);
 					this._showTaskNav();
-					app.hideProgress();
 					this.contentStyle = '';
 				});
 			},
