Various fixes after refactoring

--- a/app/elements/candidates/invite-candidates.html
+++ b/app/elements/candidates/invite-candidates.html
@@ -81,7 +81,7 @@
 						'Address': candidate.Address,
 						'Challenge': candidate.Challenge
 					};
-					this.userService.invite(toInvite);
+					this.$.userService.invite(toInvite);
 				}
 			},
 			_addCandidate: function () {
