--- a/app/elements/submission/challenge-page.html
+++ b/app/elements/submission/challenge-page.html
@@ -37,6 +37,7 @@
 					alert('This type of challenge is not yet available.');
 					return;
 				}
+				console.log(this.challenge);
 				var webInterface = document.createElement(this.challenge.Endpoints.WebInterface);
 				webInterface.challenge = this.challenge;
 				webInterface.result = this.result;
