login: Fix login on /challenge

--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,7 @@
 		debounce-duration="1000"
 		content-type="application/json"
 		with-credentials="true"
+		on-error="onResultError"
 		>
 	</iron-ajax>
 
