Bot-Task: enable scrolling for instruction

--- a/app/elements/submission/tasks/canvas-game-task.html
+++ b/app/elements/submission/tasks/canvas-game-task.html
@@ -50,7 +50,7 @@
 			height: calc(50% - 24px);
 		}
 		#botRightCard{
-			overflow: hidden;
+			overflow-y: auto;
 			margin: 8px 16px 16px 8px;
 			width: calc(100% - 24px);
 			height: calc(50% - 24px);
