Catch the timer timeout event

--- a/app/elements/submission/challenge-finished.html
+++ b/app/elements/submission/challenge-finished.html
@@ -11,7 +11,7 @@
 	<template>
 		<paper-material elevation="1" class="card">
 			<div class="flex">
-				<h2>You have completed your task. Good job!</h2>
+				<h2>You have completed your challenge. Good job!</h2>
 				<p>Your results will be computed shortly.</p>
 				<content></content>
 			</div>
