--- a/app/elements/submission/sequential/sequential-challenge.html
+++ b/app/elements/submission/sequential/sequential-challenge.html
@@ -6,6 +6,7 @@
 <link rel="import" href="/elements/submission/countdown-timer.html">
 <!-- TODO(victorbalan): Import this exactly when the challenge has finished -->
 <link rel="import" href="/elements/submission/challenge-finished.html">
+<link rel="import" href="/elements/submission/challenge-nav.html">
 
 <dom-module id="sequential-challenge">
 	<style>
@@ -19,51 +20,20 @@
 		#startChallengeCard{
 			width:35%;
 		}
-		#taskTimer{
-			margin: 0;
-			padding-top: 10px;
-			width: 50px;
-		}
 		#taskNavHeader{
 			height: 40px;
 			background: white;
 			margin: 0;
 			padding: 0;
 		}
-		#backArrowWrapper{
-			padding-left: 10px;
-			width: 30px;
-		}
-		#frontArrowWrapper{
-			width: 30px;
-			padding-right: 16px;
-		}
-		#taskNavTitle{
-			padding: 0;
-			margin: 0;
-			padding-top: 10px;
-		}
 		#leftProgressFlex{
 			margin-right: 50px;
 		}
 	</style>
 	<template>
-		<paper-material id="taskNavHeader" elevation="1" class="horizontal layout" style$="{{taskNavHeaderStyle}}">
-			<div id="backArrowWrapper">
-				<template is="dom-if" if="{{showBackArrow}}">
-					<paper-icon-button icon="arrow-back" on-click="previousTask"></paper-icon-button>
-				</template>
-			</div>
-			<span id="leftProgressFlex" class="flex"></span>
-			<p id="taskNavTitle">{{taskNavTitle}}</p>
-			<span class="flex"></span>
-			<countdown-timer id="taskTimer" duration="{{challenge.Duration}}" timeout="{{timeout}}"></countdown-timer>
-			<div id="frontArrowWrapper">
-				<template is="dom-if" if="{{showForwardArrow}}" >
-					<paper-icon-button icon="arrow-forward" on-click="nextTask"></paper-icon-button>
-				</template>
-			</div>
-		</paper-material>
+		<challenge-nav id="coolNav" task-index="{{taskIndex}}" total-tasks="{{totalTasks}}"
+		task-duration="{{taskDuration}}" challenge-duration="{{challenge.Duration}}"></challenge-nav>
+
 		<div id="content" style$="{{contentStyle}}">
 			<paper-material id="startChallengeCard" elevation="1" class="card">
 				<div class="flex">
@@ -107,6 +77,7 @@
 			// TODO(victorbalan): Refactor component and split logic and refactor requests.
 			is: 'sequential-challenge',
 			properties: {
+				totalTasks: Number,
 				challenge: {
 					type: Object,
 					notify: true,
@@ -126,70 +97,61 @@
 					notify: true,
 					value: 0
 				},
-				taskNavTitle: {
-					type: String,
-					notify: true
-				},
-				taskNavHeaderStyle:{
-					type: String,
-					notify: true,
-					value: 'display: none;'
-				},
 				contentStyle:{
 					type: String,
 					notify: true,
 					value: 'display: none;'
+				},
+				taskDuration: {
+					type: Number,
+					notify: true
 				}
 			},
 			observers: [
 				'afterPropertiesSet(challenge, result)'
 			],
+			listeners: {
+				'task-timeout': '_taskTimeout',
+				'challenge-timeout': '_challengeTimeout'
+			},
 			afterPropertiesSet: function(){
 				var currentTask = '';
+				this.totalTasks = this.challenge.Tasks.length;
 				for(var i=0; i<this.result.StartTimes.length; i++){
 					if(new Date(this.result.StartTimes[i]).getTime()>0){
 						this.taskIndex = i;
 						currentTask = this.challenge.Tasks[i];
 					}
 				}
-				if(new Date(this.result.StartTimes[i]).getTime()>0){
-					this.contentStyle = '';
-					this.$.content.innerHTML = '';
-					var finished = document.createElement('challenge-finished');
-					this.$.content.innerHTML = '';
-					this.$.content.appendChild(finished);
+				if(currentTask !== '' && this.taskIndex >= 0){
+					localStorage.setItem('challengeTimer', new Date(this.result.StartTimes[0]).getTime());
+					localStorage.setItem('taskTimer', new Date(this.result.StartTimes[this.taskIndex]).getTime());
+					this.loadTaskById(currentTask);
+					this.$.coolNav.start();
 				}else{
-					var timer = localStorage.getItem('timer');
-					if(timer !== null && currentTask !== '' && this.taskIndex >= 0){
-						this.loadTaskById(currentTask);
-						this.$.taskTimer.startWithOffset(Number(timer));
-					}else{
-						this.contentStyle = '';
-					}
-					this.displayArrows();
+					this.contentStyle = '';
 				}
-			},
-			timeout: function() {
-				var taskTimeout = document.createElement('task-timeout');
-				this.$.content.innerHTML = '';
-				this.$.content.appendChild(taskTimeout);
 			},
 			startChallenge: function() {
 				this.$.content.innerHTML = '';
-				localStorage.setItem('timer', Date.now());
+				localStorage.setItem('challengeTimer', Date.now());
 				this.loadTaskById(this.challenge.Tasks[this.taskIndex]);
-				this.$.taskTimer.start();
-				this.displayArrows();
+				this.$.coolNav.start();
 			},
 			loadTaskById: function(key){
-				if(this.challenge.Tasks.length>1){
-					this.taskNavTitle = 'Task ' + (this.taskIndex+1) +' of ' + (this.challenge.Tasks.length);
-				}
 				this.$.loadTaskRequest.url = util.build('/tasks/' + key + '?result=' + localStorage.getItem('result'));
 				this.$.loadTaskRequest.generateRequest();
 			},
 			onTaskResponse: function(r){
+				if(!localStorage.getItem('taskTimer')){
+					localStorage.setItem('taskTimer', Date.now());
+				}
 				var task = r.detail.response;
+				this.task = task;
+				// TODO(victorbalan): Replace this taskDuration with task.Assignment.Duration
+				// after investigating why Assignment has 2 fields: Duration and Duration} wich is NaN
+				this.taskDuration = this.task.Assignment.Duration;
+				this.$.coolNav.refreshTaskTimer();
 				this.importHref('/elements/submission/tasks/' + task.Assignment.Endpoints.WebInterface + '.html', function(){
 					var webInterface = document.createElement(task.Assignment.Endpoints.WebInterface);
 					webInterface.task = task;
@@ -199,26 +161,8 @@
 					});
 					this.$.content.innerHTML = '';
 					this.$.content.appendChild(webInterface);
-					this._showTaskNav();
 					this.contentStyle = '';
 				});
-			},
-			displayArrows: function(){
-				this.showBackArrow = this.taskIndex > 0;
-				this.showForwardArrow = this.taskIndex < this.challenge.Tasks.length -1;
-				// TODO(victorbalan): enable arrows when needed
-				this.showForwardArrow = false;
-				this.showBackArrow = false;
-			},
-			nextTask: function(){
-				this.taskIndex++;
-				this.displayArrows();
-				this.loadTaskById(this.challenge.Tasks[this.taskIndex]);
-			},
-			previousTask: function(){
-				this.taskIndex--;
-				this.displayArrows();
-				this.loadTaskById(this.challenge.Tasks[this.taskIndex]);
 			},
 			finishTask: function(){
 				this.$.finishTaskRequest.url = util.build(
@@ -230,17 +174,21 @@
 				this.$.finishTaskRequest.generateRequest();
 			},
 			onFinishTaskResponse: function(){
+				this._nextTask();
+			},
+			_nextTask: function(){
+				localStorage.removeItem('taskTimer');
 				this.taskIndex++;
 				if(this.taskIndex < this.challenge.Tasks.length){
 					this.loadTaskById(this.challenge.Tasks[this.taskIndex]);
 				}else{
+					this.$.coolNav.stop();
 					this.$.getResultRequest.url = util.build('/results/' + localStorage.getItem('result'));
 					this.$.getResultRequest.generateRequest();
 					var finished = document.createElement('challenge-finished');
 					this.$.content.innerHTML = '';
 					this.$.content.appendChild(finished);
 					app.finishChallenge();
-					this._hideTaskNav();
 				}
 			},
 			onFinishTaskError: function(err) {
@@ -252,11 +200,16 @@
 			onResultError: function(err){
 				console.log(err);
 			},
-			_showTaskNav: function(){
-				this.taskNavHeaderStyle = '';
+			_taskTimeout: function(){
+				this._nextTask();
 			},
-			_hideTaskNav: function(){
-				this.taskNavHeaderStyle = 'display: none';
+			_challengeTimeout: function(){
+				this.importHref('/elements/submission/challenge-timeout.html', function(){
+					var webInterface = document.createElement('challenge-timeout');
+					this.$.content.innerHTML = '';
+					this.$.content.appendChild(webInterface);
+					this.contentStyle = '';
+				});
 			}
 		});
 
