--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,7 @@
 		>
 	</iron-ajax>
 
+	<cookie-service id="cookieService"></cookie-service>
 	<paper-header-panel class="fullHeight">
 		<template is="dom-if" if="{{isLoggedIn}}">
 			<paper-toolbar>
