--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -12,6 +12,7 @@
 <link rel="import" href="/bower_components/paper-progress/paper-progress.html">
 <link rel="import" href="/bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="/bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="/bower_components/paper-toast/paper-toast.html">
 
 <!-- Error pages-->
 <link rel="import" href="error/error-page.html">
