--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -13,17 +13,9 @@ window.addEventListener('WebComponentsReady', function() {
 		var token = context.params.token;
 		var decodedToken = atob(token).split(':');
 
-		var xhr = new XMLHttpRequest();
-		xhr.onload = function() {
-			// TODO(flowlo): Request /user to set localStorage.user, but
-			// this is currently not needed.
-			app.login();
-		};
-		xhr.withCredentials = true;
-		xhr.open('PUT', util.build('/cookie'));
-		xhr.setRequestHeader('Authorization', 'Token '+ decodedToken[1]);
-		xhr.withCredentials = true;
-		xhr.send();
+		Polymer.Base.importHref('/elements/services/cookie-service.html', function(){
+			app.$.cookieService.getCookie('Token '+ decodedToken[1]);
+		});
 
 		localStorage.setItem('challenge', decodedToken[0]);
 	});
