--- a/app/elements/submission/tasks/general-code-task.html
+++ b/app/elements/submission/tasks/general-code-task.html
@@ -164,6 +164,10 @@
 				this.control.loading();
 			},
 			finishTask: function(){
+				var msg = 'Are you sure to finish this task? You will not able to change come back again.';
+				if (!window.confirm(msg)) {
+					return;
+				}
 				this.fire('task-finished');
 			},
 			onTemplates: function(e) {
